# multichannel

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_idempotency_keys.py
sidecar/signalwire-relay/: Dockerfile  README.md  pyproject.toml
sidecar/signalwire-relay/src/signalwire_relay/: main.py  translate.py
sidecar/signalwire-relay/tests/: test_translate.py
src/multichannel/: __init__.py  config.py  db.py  main.py  runtime.py
src/multichannel/api/: __init__.py
src/multichannel/api/v1/: __init__.py  delivery_status.py  messages.py  outbound.py  webhooks.py
src/multichannel/lib/: conversation_id.py  idempotency.py
src/multichannel/models/: __init__.py  base.py  event_outbox.py  idempotency_key.py  message.py  outbox_item.py
src/multichannel/providers/: __init__.py  dispatch.py  fbmessenger.py  instagram.py  meta.py  postmark.py  signalwire.py  types.py
src/multichannel/schemas/: __init__.py  cloudevent.py
src/multichannel/services/: event_outbox_drain.py  medici_client.py  notaio_client.py  outbox_drain.py  rate_limit.py  redis_publisher.py
tests/: conftest.py  test_conversation_id.py  test_delivery_status.py  test_medici_client.py  test_notaio_client.py  test_outbound.py  test_outbound_rate_limit.py  test_outbound_route.py  test_providers_dispatch.py  test_providers_meta.py  test_providers_postmark.py  test_rate_limit.py  test_redis_publisher.py  test_webhook_routes.py  test_webhooks_meta.py  test_webhooks_postmark.py  test_webhooks_signalwire.py
