[project]
name = "multichannel"
version = "0.1.0"
description = "COBD multichannel normalizer: a thin bi-directional proxy that translates inbound provider webhooks (Postmark, SignalWire, FB Messenger, Instagram) into a single CloudEvents envelope, and translates outbound requests in the same envelope into provider-specific SDK calls. Fronts CiviCRM / Chatwoot."
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0.35",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "asyncpg>=0.30",
  "httpx>=0.28",
  "structlog>=24.4",
  "uuid-utils>=0.10",
  "redis>=5.2",
  "apprise>=1.9",
  "cloudevents>=1.11",
  "postmark>=0.4",
  "signalwire>=2.0",
  "facebook-business>=21.0",
]

[project.scripts]
multichannel = "multichannel.main:run"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=5.0",
  "pytest-httpx>=0.36",
  "testcontainers[postgres,redis]>=4.8",
  "ruff>=0.8",
  "mypy>=1.13",
  "poethepoet>=0.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multichannel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/multichannel"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.poe.tasks]
dev = "uv run uvicorn multichannel.main:app --reload --port 8004"
test = "uv run pytest"
lint = "uv run ruff check src tests"
fmt = "uv run ruff format src tests"
type = "uv run mypy src"
